cors and cros install

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "cros": "^1.0.1",
     "nodemon": "^2.0.16"
   }
 }
