--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "cors": "^2.8.5",
     "cros": "^1.0.1",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "mongodb": "^4.6.0",
     "nodemon": "^2.0.16"
   }
 }
