--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
     "nodemailer": "^6.7.5",
+    "nodemailer-mailgun-transport": "^2.1.4",
     "nodemon": "^2.0.16"
   }
 }
