--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongodb": "^4.6.0",
     "nodemailer": "^6.7.5",
     "nodemailer-mailgun-transport": "^2.1.4",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "stripe": "^9.4.0"
   }
 }
